@@ -53,6 +53,8 @@ v4.0-cvs
 v3.3.11-cvs
 -----------
 
+[jan] Skip event status synchronization with Outlook, which is broken.
+[jan] Don't send SIF data to recent Funambol clients, unless requested.
 [jan] Log all queries by the history library.
 
 
